--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "Rui的生日惊喜",
   "short_name": "Rui的生日惊喜",
   "description": "一份给Rui的专属生日惊喜",
-  "start_url": "/",
+  "start_url": "/Birthday-gift-for-Rui/", 
+  "scope": "Birthday-gift-for-Rui/",
   "display": "fullscreen",
   "theme_color": "#8b5aa0",
   "background_color": "#000000",
